[project]
name = "imbue-mngr-subagent-proxy"
version = "0.1.0"
description = "mngr plugin that owns Claude Code subagents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbue-mngr==0.2.5",
    "imbue-mngr-claude==0.2.5",
]

[dependency-groups]
dev = [
    "imbue-mngr-modal==0.1.0",
]

[project.entry-points.mngr]
subagent_proxy = "imbue.mngr_subagent_proxy.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-mngr-claude = { workspace = true }
imbue-mngr-modal = { workspace = true }

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_subagent_proxy",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]

[tool.coverage.report]
fail_under = 66
