[project]
name = "imbue-mngr-uncapped-claude"
version = "0.1.0"
description = "Drop-in replacement for `claude -p` that runs through mngr create/message/transcript"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbue-mngr==0.2.7",
    "imbue-mngr-claude",
    "imbue-mngr-wait",
    "click-option-group>=0.5.6",
]

[project.entry-points.mngr]
uncapped_claude = "imbue.mngr_uncapped_claude.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-mngr-claude = { workspace = true }
imbue-mngr-wait = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"

[tool.pytest.ini_options]
timeout_func_only = true
pythonpath = ["."]
testpaths = ["."]
addopts = [
    "--cov=imbue.mngr_uncapped_claude",
    "--cov-report=term-missing",
    "--timeout=30",
]

[tool.coverage.run]
source = ["imbue.mngr_uncapped_claude"]
omit = [
    "*_test.py",
    "test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "assert_never",
]
