[project]
name = "imbue-mngr-usage"
version = "0.2.6"
description = "mngr usage subcommand: scriptable Claude Code rate-limit visibility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbue-mngr==0.2.6",
    "imbue-mngr-claude==0.2.6",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "pydantic>=2.0",
]

[project.entry-points.mngr]
usage = "imbue.mngr_usage.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.hatch.build.targets.wheel.force-include]
"imbue/mngr_usage/resources/claude_statusline.sh" = "imbue/mngr_usage/resources/claude_statusline.sh"
"imbue/mngr_usage/resources/claude_rate_limits_writer.sh" = "imbue/mngr_usage/resources/claude_rate_limits_writer.sh"

[tool.uv.sources]
imbue-mngr = { workspace = true }
imbue-mngr-claude = { workspace = true }

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_usage",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]

[tool.coverage.report]
fail_under = 80
