[project]
name = "imbue-mngr-vps"
version = "0.1.10"
description = "VPS provider base classes for mngr (container and bare placement)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr==0.2.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]
# Force-include the snapshot helper resources so they're bundled in the wheel
# (hatchling would pick them up implicitly, but being explicit avoids any
# surprise when a future build-config refactor narrows the include set).
include = [
    "imbue/mngr_vps/resources/snapshot_helper.sh",
    "imbue/mngr_vps/resources/snapshot_helper.service",
]

[tool.uv.sources]
imbue-mngr = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_vps",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.coverage.report]
# Lower than concrete provider packages (e.g. mngr_vultr at 60%) because
# most of `instance.py` is host-lifecycle code (create, snapshot, exec,
# destroy) that's exercised end-to-end by each concrete provider's release
# tests rather than at the unit level.
fail_under = 45
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
