[project]
name = "imbue-mngr-vps-docker"
version = "0.1.1"
description = "VPS Docker provider base classes for mngr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr==0.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
exclude = ["*_test.py", "test_*.py", "**/conftest.py", "**/testing.py"]

[tool.uv.sources]
imbue-mngr = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.mngr_vps_docker",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.coverage.report]
# Lower than other provider packages (e.g. mngr_vultr at 60%) because
# this package's `--cov=imbue.mngr_vps_docker` measurement does not
# include exercise of the base-class API-discovery methods
# (parallel-SSH fan-out, cache fallback, name/id lookup) that live in
# VpsDockerProvider. Those methods are covered end-to-end by each
# concrete provider's release tests, which run outside the offload
# pipeline that drives this gate. Adding stub-subclass unit tests
# against the base discovery methods would let us raise this threshold.
fail_under = 38
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
