[project]
name = "modal-proxy"
version = "0.1.0"
description = "Abstraction layer over Modal SDK for mng: supports direct, testing, and remote modes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
imbue-common = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
