[project]
name = "modal-proxy"
version = "0.1.7"
description = "Abstraction layer over Modal SDK for mngr: supports direct, testing, and remote modes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "concurrency-group==0.1.15",
    "imbue-common==0.1.15",
    "imbue-mngr==0.2.6",
    "modal==1.3.1",
    "resource-guards==0.1.5",
]

[project.entry-points.resource_guards]
modal = "imbue.modal_proxy.register_guards:register_modal_guard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]
# Switching to only-include (explicit whitelist) instead of the standard
# `exclude = [..., "**/testing.py"]`. modal_proxy/testing.py is a runtime
# module (TestingModalInterface) that mngr_modal/backend.py imports at
# module top -- the standard `**/testing.py` exclude breaks the packaged
# minds.app at launch with `ModuleNotFoundError: No module named
# 'imbue.modal_proxy.testing'`. Using only-include lets us ship testing.py
# while still keeping *_test.py / conftest.py / testing_provider_test.py
# out of the wheel (none match the whitelist).
only-include = [
  "imbue/modal_proxy/__init__.py",
  "imbue/modal_proxy/data_types.py",
  "imbue/modal_proxy/direct.py",
  "imbue/modal_proxy/errors.py",
  "imbue/modal_proxy/interface.py",
  "imbue/modal_proxy/log_utils.py",
  "imbue/modal_proxy/register_guards.py",
  "imbue/modal_proxy/testing.py",
]

[tool.uv.sources]
concurrency-group = { workspace = true }
imbue-common = { workspace = true }
imbue-mngr = { workspace = true }
resource-guards = { workspace = true }

[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.modal_proxy",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.coverage.report]
fail_under = 35
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]
